# phylsssss

./: README.md
lib/abc/src/base/io/: ioAbc.h  ioReadVerilog.c  ioUtil.c
lib/abc/src/base/ver/: ver.h  verCore.c
lib/abc/src/map/scl/: sclLoad.c  sclSize.c  sclSize.h
lib/mockturtle/include/mockturtle/algorithms/: mapper.hpp  mapper20240930.hpp
lib/mockturtle/include/mockturtle/io/: bench_reader.hpp  write_verilog.hpp
lib/mockturtle/include/mockturtle/utils/: tech_library.hpp
lib/mockturtle/include/mockturtle/views/: binding_view.hpp
src/: CMakeLists.txt  asap7.genlib  phyLS.cpp
src/commands/: ic_map.hpp  techmap.hpp
src/core/: MCTS.hpp  mapper_MCTS.hpp  matrix.hpp  read_placement_file.hpp  stp_sat.hpp  tonpz.hpp
